--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,68 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  margin: auto;
+  font-family: 'Roboto', sans-serif;
+  padding: 15px;
+  background-color: #a0d2eb79;
+  color: #494D5F;
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.articles-display {
+  margin-top: 50px;
+}
+
+fieldset {
+  text-align: left;
+}
+
+input, button, option, select {
+  font-family: 'Roboto', sans-serif;
+  color: #494D5F
+}
+
+button, input[type=submit] {
+  height: 60px;
+  width: 60px;
+  border-radius: 19px;
+  border-style: none;
+  background-color: #53495f;
+  color: #E5EAF5;  
+}
+
+input[type=text] {
+  height: 54px;
+  margin-right: 10px;
+}
+
+.filters-container {
+  border-width: 0.5px;
+  display: flex;
+  justify-content: space-around;
+  margin: 25px 80px;
+  padding: 15px;
+}
+
+.article-container {
+  background-color: #53495f;
+  color: #E5EAF5;
+  border-radius: 50px;
+  margin: 10px;
+  padding: 8px;
+  width: 250px;
+  height: 200px;
+}
+
+.article-container * {
+  text-align: center;
+}
+
+.list-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+a {
+  text-decoration: none;
+  color: #494D5F
 }
