--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@ body {
   margin: auto;
   font-family: 'Roboto', sans-serif;
   padding: 15px;
-  background-color: #a0d2eb79;
-  color: #494D5F;
+  background-color: #2A3166;
+  color: #CAE7DF;
   text-align: center;
 }
 
@@ -17,7 +17,7 @@ fieldset {
 
 input, button, option, select {
   font-family: 'Roboto', sans-serif;
-  color: #494D5F
+  color: #2A3166
 }
 
 button, input[type=submit] {
@@ -25,8 +25,8 @@ button, input[type=submit] {
   width: 60px;
   border-radius: 19px;
   border-style: none;
-  background-color: #53495f;
-  color: #E5EAF5;  
+  background-color: #F4ABAA;
+  color: #2A3166;  
 }
 
 input[type=text] {
@@ -43,8 +43,9 @@ input[type=text] {
 }
 
 .article-container {
-  background-color: #53495f;
-  color: #E5EAF5;
+  background-color: #EE7879;
+  color: #2A3166
+  ;
   border-radius: 50px;
   margin: 10px;
   padding: 8px;
@@ -64,5 +65,13 @@ input[type=text] {
 
 a {
   text-decoration: none;
-  color: #494D5F
+  color: #2A3166
+}
+
+#checked {
+  color: yellow;
+}
+
+#unchecked {
+  color: #2A3166;
 }
